# nvctl

./: .claudeignore  .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md
.claude/: settings.json
.claude/agents/: iced-widget-reviewer.yaml  tea-reviewer.yaml
.claude/hooks/: pre-commit.sh
.claude/skills/: build.md  check.md  gui.md
.github/workflows/: ci.yml  release.yml
nvctl-gui/: CLAUDE.md  Cargo.toml
nvctl-gui/src/: app.rs  main.rs  message.rs  state.rs  theme.rs
nvctl-gui/src/services/: config.rs  curve_daemon.rs  gpu_monitor.rs  mod.rs  profiles.rs  tray.rs
nvctl-gui/src/views/: dashboard.rs  fan_control.rs  mod.rs  power_control.rs  profiles.rs  settings.rs  thermal.rs
nvctl-gui/src/widgets/: ecc_gauge.rs  fan_curve.rs  fan_gauge.rs  health_gauge.rs  mem_temp_gauge.rs  mod.rs  multi_series_graph.rs  pcie_gauge.rs  power_bar.rs  temp_gauge.rs  time_series.rs  util_gauge.rs  video_gauge.rs  vram_bar.rs
nvctl-gui/tests/: integration_tests.rs
src/: error.rs  lib.rs  main.rs  mock.rs
src/alerts/: config.rs  manager.rs  mod.rs  notifier.rs  types.rs
src/cli/: args.rs  mod.rs  output.rs
src/commands/: alerts.rs  control.rs  fan.rs  health.rs  info.rs  list.rs  mod.rs  power.rs  processes.rs  thermal.rs
src/config/: builder.rs  file.rs  mod.rs
src/domain/: fan.rs  gpu.rs  memory.rs  mod.rs  pcie.rs  performance.rs  power.rs  process.rs  thermal.rs
src/health/: mod.rs
src/nvml/: device.rs  mod.rs  traits.rs  wrapper.rs
src/services/: alert_service.rs  fan_service.rs  mod.rs  monitor.rs  power_service.rs
